# llm-leaderboard

./: .gitignore  AGENT.md  EVALUATION_REPORT.md  README.md  check_status.sh  docker-compose.yaml  generation.jsonl  monitor_progress.sh  restart_improved_evaluation.sh  run_with_compose.sh  start_full_evaluation.sh  start_no_reasoning_evaluation.sh  start_ultra_timeout_evaluation.sh
blend_run_configs/: _blend_config.yaml
configs/: Untitled  base_config.yaml  config-amazon-nova-2-lite-v1:0.yaml  config-anthropic-claude-haiku-4_5-20251001-openrouter.yaml  config-anthropic-claude-opus-4-5-20251125-openrouter.yaml  config-deepseek-v3_2-speciale.yaml  config-deepseek-v3_2.yaml  config-foxbrain-zh-tw-cbbq-smoke.yaml  config-foxbrain-zh-tw.yaml  config-gemini-3-flash-preview.yaml  config-gemini-3_0-pro-preview.yaml  config-gpt-4o-2024-11-20.yaml  config-gpt-5_1-2025-11-13.yaml  config-gpt-5_2-2025-12-11.yaml  config-llama-3_1-405B-Instruct-FP8.yaml  config-moonshotai-kimi-k2-thinking.yaml  config-qwen-Qwen3-Next-80B-A3B-Instruct.yaml  config-solar-pro-openai-compatible.yaml  config-solar-pro-ultra-timeout.yaml  config-xai-grok-4_1.yaml  zh_board_v1_spec.yaml
docs/: swebench_api_quickstart.md  swebench_api_server_setup.md  swebench_api_summary_ja.md  swebench_docs_index.md  swebench_server_startup_guide.md  zh_board_cicd.md  zh_board_dataset_whitelist_template.md  zh_board_v1_report_fields.md
scripts/: llm_inference_adapter.py  run_eval.py  (+2 more)
scripts/copy_leaderboard/: .gitignore  README.md  __init__.py  config.yaml  config_example.yaml  copy_leaderboard.py  pyproject.toml
(+26 files in other folders)
